fix: scrollbar styling

--- a/WebServer/public/css/styles.css
+++ b/WebServer/public/css/styles.css
@@ -109,7 +109,8 @@ small {
     border-radius: var(--large);
   }
 
-  &::-webkit-scrollbar-track {
+  &::-webkit-scrollbar-track,
+  &::-webkit-scrollbar-corner {
     background-color: transparent;
   }
 }
@@ -235,16 +236,15 @@ input {
   border: 1px solid var(--border);
   border-radius: var(--standard);
 
+  &::-webkit-scrollbar-track {
+    margin: 5px;
+  }
+
   table {
     border-collapse: collapse;
     table-layout: fixed;
     min-width: 100%;
     min-height: 100%;
-
-    &::-webkit-scrollbar-track {
-      margin: 5px 0;
-      border-left: 1px solid var(--border);
-    }
 
     thead {
       position: sticky;
